Solved some more errors pointed by FindBugs.